@@ -7,6 +7,7 @@ Changes in version 3.1 GA (2011-12-12)
 --------------------------------------
 
 * fixed QuartzJobBean to work with Quartz 2.0/2.1 as well
+* added String constants to MediaType
 
 
 Changes in version 3.1 RC2 (2011-11-28)
